--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -22,12 +22,16 @@
 
 <div id="joinForm" style="display: none;">
     <form id="signupForm">
-        <label for="userId">아이디:</label>
-        <input type="text" id="userId" name="userId"><br><br>
         <label for="name">이름:</label>
         <input type="text" id="name" name="name"><br><br>
-        <label for="phoneNumber">폰번호:</label>
-        <input type="text" id="phoneNumber" name="phonNumber"><br><br>
+        <label for="nickName">닉네임:</label>
+        <input type="text" id="nickName" name="nickName"><br><br>
+        <label for="email">이메일:</label>
+        <input type="email" id="email" name="email"><br><br>
+        <label for="password">비밀번호:</label>
+        <input type="password" id="password" name="password"><br><br>
+        <label for="address">주소:</label>
+        <input type="text" id="address" name="address"><br><br>
         <input type="submit" value="가입하기">
     </form>
 </div>
@@ -97,9 +101,11 @@
         event.preventDefault();
 
         const formData = {
-            userId: document.getElementById("userId").value,
             name: document.getElementById("name").value,
-            phoneNumber: document.getElementById("phoneNumber").value
+            nickName: document.getElementById("nickName").value,
+            email: document.getElementById("email").value,
+            password: document.getElementById("password").value,
+            address: document.getElementById("address").value
         };
 
         fetch('/member/join', {
